Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -1,5 +1,9 @@
 # GET API INFORMATION ( GET -/ )
 
+| Method | Endpoint | Description | Secure |
+| ------------- | ------------- | ----- | ------ |
+| GET  | / | Get API information | 0 |
+
 # Description
 
 This is the root endpoint of the entire API, and its objective is basically to give a summary basic information of the API itself in json format using as a means to extract some data from cave ```package.json``` through ```ES6 imports``` as you can see in these lines within ```./src/api/index.js``` like this:
