Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -28,6 +28,9 @@ In this endpoint ```localhost:3000/``` you will get the summarized api info in j
   }
 ```
 
+# ERROR
+pendig(inquire simulating for myself the error default)
+
 # Routing process
 
 MAIN INDEX
