--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -34,9 +34,12 @@ In root file ```index.js```  we positions our routes like this:
 ```
 app.use(api);
 app.use('/api', api);
-app.use('/api/v1', api)``` 
+app.use('/api/v1', api)
+``` 
 this routes are above the middleware defined below
-``` app.use((req, res, next) => res.status(404).json(notFound()));``` 
+``` 
+app.use((req, res, next) => res.status(404).json(notFound()));
+``` 
 this means that Express will attempt to match & call routes before continuing on, at which point we 
 assume it's a 404 because no route has handled the request.
 
