Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -43,6 +43,22 @@ app.use((req, res, next) => res.status(404).json(notFound()));
 this means that Express will attempt to match & call routes before continuing on, at which point we 
 assume it's a 404 because no route has handled the request.
 
+The error response is import from ```./src/messages/error/http.js``` and varies depending on whether the message is customized in ```notFound(customMessage)``` or the default message of ```'Not found'``` as it is shown in ```http.js```
+```
+export default {
+  notFound(customMessage) {
+    return {
+      status: 404,
+      message: customMessage || 'Not found', // if custommessage is not specify then 'Not found' would by message for default
+    };
+  }
+```
+
+so the answer would be sent in the browser something like this:
+```
+{"status":404,"message":"Not found"}
+```
+
 # Routing process
 
 MAIN INDEX
