Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -28,7 +28,7 @@ In this endpoint ```localhost:3000/``` you will get the summarized api info in j
   }
 ```
 
-# ERROR HANDLER
+# Error Handler
 
 In root file ```index.js```  we positions our routes like this:
 ```
