Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -53,7 +53,9 @@ export default {
     };
   }
 ```
-
+Since this is the last non-error-handling
+middleware use()d, we assume 404, as nothing else
+responded.
 so the answer would be sent in the browser something like this:
 ```
 {"status":404,"message":"Not found"}
