Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -54,7 +54,7 @@ export default {
   }
 ```
 Since this is the last non-error-handling
-middleware use()d, we assume 404, as nothing else
+middleware ```use()```, we assume 404, as nothing else
 responded.
 
 So the answer would be sent in the browser something like this:
