Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -101,3 +101,15 @@ router.get('/', (req, res) => {
   });
 });
 ```
+
+#Terminal
+
+Standard combined log output ```app.use(morgan('combined'));```
+
+```
+:remote-addr - :remote-user [:date[clf]] "
+:method :url HTTP/
+:http-version" :status 
+:res[content-length] "
+:referrer" ":user-agent"
+```
