Update 1. Get API information.md

--- a/EndpointsDocu/1. Get API information.md
+++ b/EndpointsDocu/1. Get API information.md
@@ -107,7 +107,8 @@ router.get('/', (req, res) => {
 Standard combined log output ```app.use(morgan('combined'));```
 
 ```
-:remote-addr - :remote-user [:date[clf]] "
+:remote-addr - :remote-user 
+[:date[clf]] "
 :method :url HTTP/
 :http-version" :status 
 :res[content-length] "
